--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,4 @@ python:
 install:
   - "pip install -r requirements.txt"
 # command to run tests
-script:
-  - "python tests.py"
+script: python tests.py
