--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ python:
   - "nightly"
 # command to install dependencies
 install:
-  - "pip install -r requirements.txt"
+  - pip install -r requirements.txt
 # command to run tests
 script: python tests.py
